# rust-MFRC522

./: .gitignore  Cargo.toml  README.md
examples/: bus_i2cdev.rs
examples.feat/: bus_i2cdev.rs  bus_spidev.rs  dump_info.rs  mifare_read.rs  mifare_write.rs  read_uid.rs
src/: host.rs  lib.rs  macros.rs  mifare.rs  ndebug.rs  pcd.rs  picc.rs  self_test.rs
src/bitflags/: mod.rs
src/bus/: i2cdev.rs  mod.rs  spidev.rs
src/pcd/: mod.rs  reg.rs
src/picc/: atqa.rs  mod.rs  uid.rs
