[package]
name = "mfrc522"
version = "0.0.0"
authors = ["emk <rust@emk.one.pl>"]
license = "MPL-2.0"
description = "Library for MFRC522 card reader."
keywords = ["rfid", "mifare", "ntag", "ISO 14443A", "rc522"]
repository = "https://github.com/emkw/rust-MFRC522.git"
readme = "README.md"
publish = false

[features]
# By default the crate builds as no_std.
default = []

# Skip fmt::Debug implementations and logging that requires fmt::Debug.
ndebug = []

# Skip all logging.
nlog = [ "log/max_level_off" ]

# Compile without no_std.
use_std = []

# Calculate CRC_A on host rather than on PCD.
host_crc = []

# Provide MFRC522 self-test routine.
# This is disabled by default to save memory on
# embedded systems.
self_test = []

# Meta-feature enabling everything, not bus-related.
all = ["host_crc", "self_test", "use_std"]

[dependencies]
log = "~0.3.4"
i2cdev = { version = "~0.3.0", optional = true }
spidev = { version = "~0.2.1", optional = true }

[dev-dependencies]
env_logger = "~0.3.4"

#[[example]]
#name = "bus_i2cdev"
# How to enable crate features for the example?
# features = ["i2cdev"]

#[[example]]
#name = "bus_spidev"
# How to enable crate features for the example?
# features = ["spidev"]

#[[example]]
#name = "dump_info"
# How to enable crate features for the example?
# features = ["spidev", "self_test"]
